tests/flow/spread/test10.js
var x = null;
var o = { p: 0, ...x };
(o.p: empty); // error: number ~> empty
